--- a/YF/styles/secondaryStyles.css
+++ b/YF/styles/secondaryStyles.css
@@ -560,3 +560,6 @@
        margin: 10px 0 10px 0;
     }
 }
+body {
+    padding-top: 70px;
+}
